--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.4",
+    "react-native-gesture-handler": "^2.13.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-web": "~0.19.6"
   },
